parcours overflow fixed

--- a/src/Components/containers/trailCard/trailCard.css
+++ b/src/Components/containers/trailCard/trailCard.css
@@ -35,7 +35,6 @@
     color: #1c0e57;
     font-weight: bold;
     font: 1.5em;
-    margin-bottom: 0.3em;
     padding-right: 1em;
 }
 
