--- a/src/Components/parcours/parcours.css
+++ b/src/Components/parcours/parcours.css
@@ -2,6 +2,7 @@
     background-image: url(../../Assets/background.png);
     background-repeat: no-repeat;
     background-size: cover;
+    min-height: 100vh;
 }
 
 .runningwild__parcours-header {
@@ -10,4 +11,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.runningwild__parcours-main {
+ margin-top: 5.5rem;
 }
